--- a/.github/workflows/create-pull-request.yaml
+++ b/.github/workflows/create-pull-request.yaml
@@ -13,6 +13,6 @@ jobs:
       - name: pull-request
         uses: repo-sync/pull-request@v2
         with:
-          github_token: ${{ secrets.WORKFLOW_RUN }}
+          github_token: ${{ secrets.REPO_ACCESS_TOKEN }}
           destination_branch: "master"
           pr_title: "Pulling ${{ steps.vars.outputs.branch }} into develop"
