--- a/.github/workflows/create-pull-request.yaml
+++ b/.github/workflows/create-pull-request.yaml
@@ -16,3 +16,4 @@ jobs:
           github_token: ${{ secrets.REPO_ACCESS_TOKEN }}
           destination_branch: "master"
           pr_title: "Pulling ${{ steps.vars.outputs.branch }} into develop"
+          pr_template: ".github/pull_request_template.md"
